Search design-fix on mobile

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1232,6 +1232,9 @@ section {
 		}
 		.searchTips {
 			font-size: 0;
+			@media (max-width: @xs) {
+				display: none !important;
+			}
 		}
 		#searchFilter {
 			display: block;
